--- a/pres/04-motivating-interlude.tex
+++ b/pres/04-motivating-interlude.tex
@@ -2,12 +2,26 @@
 
 \begin{frame}
     \frametitle{Arrow's Impossibility Theorem}
+    \begin{block}{Arrow's Impossibility Theorem}
+        It is impossible to construct a utility function
+        that maps individual preferences onto a global preference
+        order without imposition or dictating \cite{arrow_difficulty_1950,franssen_arrows_2005}.
+    \end{block}
+    \pause
+    \begin{block}{Consequences of Arrow's Theorem}
+        \begin{enumerate}[<+->]
+            \item There is no one-size-fits-all method for public engagement or
+            decision-making.
+            \item Aggregated metrics can never adequately capture ``just outcomes'' ---
+            this would imply a utility function.
+            \item Participatory processes must include a deliberative element to evaluate
+            tradeoffs.
+        \end{enumerate}
+    \end{block}
 
-    Here is Arrow's Theorem... 
-
-    and its consequences
 \end{frame}
 
 \begin{frame}
     \frametitle{Case study objectives}
+
 \end{frame}
