--- a/pres/05-bucket-02.tex
+++ b/pres/05-bucket-02.tex
@@ -1,1 +1,10 @@
-\section{}
+\section{Bucket \#2: Energy Justice and Modeling in Illinois}
+
+\subsection{Description of Cases}
+
+[Why Illinois]
+
+[Why these municipalities]
+
+[Why these people]
+
