--- a/pres/2025-dotson-defense.tex
+++ b/pres/2025-dotson-defense.tex
@@ -30,6 +30,8 @@
 \usepackage{tikz}
 \usepackage{soul}
 \usepackage{pgfplots}
+\usepackage[table, dvipsnames]{xcolor}
+
 
 
 \definecolor{LightGray}{gray}{0.9}
