--- a/pres/05-bucket-02.tex
+++ b/pres/05-bucket-02.tex
@@ -1,10 +1,41 @@
 \section{Bucket \#2: Energy Justice and Modeling in Illinois}
 
-\subsection{Description of Cases}
+\subsection{Background}
 
-[Why Illinois]
 
-[Why these municipalities]
+\begin{frame}
+    \frametitle{Background}
+        
+    [Why Illinois]
 
-[Why these people]
+    [Why these municipalities]
 
+    [Why these people]
+
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Energy Procurement in Illinois}
+    \begin{figure}
+        \centering
+        \includegraphics[height=0.75\textheight]{../docs/figures/07_interview_chapter/illinois-electric-choice.png}
+        \caption{Flow chart describing how customers receive electricity in Illinois.}
+        \label{fig:illinois-flow-chart}
+    \end{figure}
+\end{frame}
+
+\subsection{Methodology}
+
+\begin{frame}
+    \frametitle{Methodology}
+
+    I conducted 13 interviews through Zoom... 
+
+    I transcribed and analyzed the interviews using thematic analysis
+
+    I supplemented the interiews with reports and documents from Illinois state
+    and municipalities.
+\end{frame}
+
+\subsection{Results}
