adds 85% of a full draft

--- a/pres/01-introduction.tex
+++ b/pres/01-introduction.tex
@@ -1,11 +1,24 @@
 \section{Introduction}
 
 \subsection{Background}
+
 \begin{frame}
     \frametitle{The Clean Energy Transition}
     Our changing climate and additional demand drivers from data 
     centers and \gls{ai} require a just transition from fossil 
     fuels to clean energy.
+    \begin{columns}
+        \column[t]{5.5cm}    
+        \begin{figure}
+            \centering
+            \resizebox{\columnwidth}{!}{\input{../docs/figures/01_introduction/mauna-loa-co2.pgf}}
+        \end{figure}
+        \column[t]{5.25cm}    
+        \begin{figure}
+            \centering
+            \resizebox{\columnwidth}{!}{\input{../docs/figures/01_introduction/emissions-by-source.pgf}}
+        \end{figure}
+    \end{columns}
 \end{frame}
 
 \begin{frame}
