--- a/pres/05-bucket-02.tex
+++ b/pres/05-bucket-02.tex
@@ -6,12 +6,34 @@
 \begin{frame}
     \frametitle{Background}
         
-    [Why Illinois]
-
-    [Why these municipalities]
-
-    [Why these people]
-
+    \begin{columns}
+        \column[t]{2.5cm}
+        \begin{figure}
+            \centering
+            % \resizebox{!}{0.8\textheight}{\input{../docs/figures/07_interview_chapter/illinois_plot.pgf}}
+            \resizebox{\columnwidth}{!}{\input{../docs/figures/07_interview_chapter/illinois_plot.pgf}}
+            \caption{Illinois and selected municipalities.}
+            \label{fig:illinois}
+        \end{figure}
+        \column[t]{7.5cm}
+        \begin{block}{Why Illinois?}
+            \begin{enumerate}[<+->]
+                \item Illinois is among the most ambitious states for shifting
+                to clean energy.
+                \item Illinois has a variety of mechanisms for energy choice.
+            \end{enumerate}
+        \end{block}
+        \begin{block}{Why these municipalities?}
+            The chosen municipalities cover the range of energy choice options
+            within Illinois.
+            \begin{itemize}[<+->]
+                \item Champaign
+                \item Urbana
+                \item \gls{uiuc}
+                \item Naperville
+            \end{itemize}
+        \end{block}
+    \end{columns}
 \end{frame}
 
 
@@ -19,7 +41,7 @@
     \frametitle{Energy Procurement in Illinois}
     \begin{figure}
         \centering
-        \includegraphics[height=0.75\textheight]{../docs/figures/07_interview_chapter/illinois-electric-choice.png}
+        \includegraphics[height=0.8\textheight]{../docs/figures/07_interview_chapter/illinois-electric-choice.png}
         \caption{Flow chart describing how customers receive electricity in Illinois.}
         \label{fig:illinois-flow-chart}
     \end{figure}
@@ -30,12 +52,71 @@
 \begin{frame}
     \frametitle{Methodology}
 
-    I conducted 13 interviews through Zoom... 
 
-    I transcribed and analyzed the interviews using thematic analysis
-
-    I supplemented the interiews with reports and documents from Illinois state
-    and municipalities.
+    \begin{columns}
+        \column[t]{3.33cm}
+        \begin{block}{Interviews and selection}
+            \begin{itemize}[<+->]
+                \item Conducted 13 interviews with experts and practitioners.
+                \item Selected through purposive and snowball sampling
+                \item Semi-structured interiews with an interview guide.
+            \end{itemize}
+        \end{block}
+        \column[t]{3.33cm}
+        \begin{block}{Transcription and Analysis}
+            \begin{itemize}[<+->]
+                \item Interviews were transcribed with the ``listen and revise''
+                method \cite{battaglia_listen_2024}.
+                \item Initial coding performed with \texttt{Taguette}
+                \cite{rampin_taguette_2021}.
+                \item Codes were iteratively developed into themes
+                \cite{braun_using_2006}.
+            \end{itemize}
+        \end{block}
+        \column[t]{3.33cm}
+        \begin{block}{Supplemental Document Review}
+            Supplemental documents (where relevant) include
+            \begin{itemize}[<+->]
+                \item Climate action/sustainability plans
+                \item Statutes
+            \end{itemize}
+        \end{block}
+    \end{columns}
 \end{frame}
 
 \subsection{Results}
+\begin{frame}
+    \frametitle{Research Question \#1: How much are \glspl{esom} used?}
+
+    [Put results, here.]
+\end{frame}
+
+\begin{frame}
+    \frametitle{Research Question \#2: How is justice considered?}
+
+    [Put results, here.]
+\end{frame}
+
+\begin{frame}
+    \frametitle{Research Question \#3: How useful is \gls{osier}?}
+
+    \begin{block}{Select Quotes}
+        \begin{itemize}[<+->]
+            \item   \textit{[Y]ou need a tool like this in order to properly balance other
+                        public policy objectives (Interviewee IP3).}  
+            \item \textit{I mean this is exactly what we need, an energy model that shows us
+                        like something other than cost... I think that is going to be infinitely
+                        useful (Interviewee IA2).}
+            \item \textit{Everybody can be involved in the process and communities that don’t
+                        have the resources to buy software can do this themselves (Interviewee UP2).}
+        \end{itemize}
+    \end{block}
+
+\end{frame}
+
+\subsection{Discussion}
+\begin{frame}
+    \frametitle{Discussion}
+
+    [Put discussion, here.]
+\end{frame}
