--- a/pres/2025-dotson-defense.tex
+++ b/pres/2025-dotson-defense.tex
@@ -172,6 +172,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \input{03-osier-demonstration.tex}
 \input{04-motivating-interlude.tex}
 \input{05-bucket-02.tex}
+\input{06-future-work.tex}
 
 % \input{acks}
 %%--------------------------------%%
