first full draft of slides. the end was a bit rushed

--- a/pres/05-bucket-02.tex
+++ b/pres/05-bucket-02.tex
@@ -88,20 +88,29 @@
 \begin{frame}
     \frametitle{Research Question \#1: How much are \glspl{esom} used?}
 
-    [Put results, here.]
+    \begin{enumerate}
+        \item At the municipal level: not at all. This is due to structural barriers.
+        \item At the state level: some contracted work for procurement plans.
+    \end{enumerate}
+    
 \end{frame}
 
 \begin{frame}
     \frametitle{Research Question \#2: How is justice considered?}
 
-    [Put results, here.]
+    \begin{itemize}[<+->]
+        \item The state of Illinois discursively considers justice. (E.g., Justice-40, ``equity-eligible'' designation)
+        \item Some municipalities have dedicated justice and equity staff, but it seems siloed from planning.
+    \end{itemize}
+
 \end{frame}
 
 \begin{frame}
-    \frametitle{Research Question \#3: How useful is \gls{osier}?}
+    \frametitle{Research Question \#3: How useful is \gls{osier}? I}
 
     \begin{block}{Select Quotes}
-        \begin{itemize}[<+->]
+        \setbeamercovered{transparent}
+        \begin{itemize}[<+,3>]
             \item   \textit{[Y]ou need a tool like this in order to properly balance other
                         public policy objectives (Interviewee IP3).}  
             \item \textit{I mean this is exactly what we need, an energy model that shows us
@@ -111,12 +120,36 @@
                         have the resources to buy software can do this themselves (Interviewee UP2).}
         \end{itemize}
     \end{block}
+\end{frame}
 
+\begin{frame}
+    \frametitle{Research Question \#3: How useful is \gls{osier}? II}
+    Interviewees were impressed by three main things. 
+    \begin{enumerate}[<+->]
+        \item They appreciated that \gls{osier} could model objectives besides cost.
+        \item They felt that \gls{osier} could be useful for communicating with decision-makers and constituents.
+        \item They thought \gls{osier} could enhance participation.
+    \end{enumerate}
+    
 \end{frame}
 
 \subsection{Discussion}
 \begin{frame}
     \frametitle{Discussion}
 
-    [Put discussion, here.]
+    \begin{block}{Key Takeaways}
+        \begin{enumerate}
+            \item There are a variety of structural barriers to modeling at the municipal level.
+            \item Justice is seldom considered as an operational imperative.
+        \end{enumerate}
+    \end{block}
+    \begin{block}{Recommendations}
+    Illinois should take steps to incorporate modeling that is
+        \begin{enumerate}
+                \item more transparent,
+                \item addresses multiple competing objectives,
+                \item co-creative with public stakeholders.
+            \end{enumerate}
+    \end{block}
+
 \end{frame}
