--- a/pres/06-future-work.tex
+++ b/pres/06-future-work.tex
@@ -1,1 +1,11 @@
 \section{Conclusions \& Future Work}
+
+\begin{frame}
+    \frametitle{Future Work}
+
+    \begin{itemize}
+        \item Enhancements to \gls{osier} (e.g., for fuel cycle analysis, different energy markets, coupling with
+        other models, ...)
+        \item Demonstrate \gls{osier} in a participatory modeling process.
+    \end{itemize}
+\end{frame}
